# rag-assistant

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/backend/: main.py
backend/src/backend/api/: endpoints.py
backend/src/backend/core/: assistant.py  azure_client.py  logging_config.py  vector_store.py
frontend/: Dockerfile  chainlit.md  pyproject.toml
frontend/src/frontend/: app.py  prompts.py
