[project]
name = "rag-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.23.1",
    "poethepoet>=0.32.0",
    "pytest>=8.3.4",
    "ruff>=0.8.5",
]

[tool.uv.workspace]
members = ["backend"]

[tool.poe.tasks]
fmt = "ruff format ${PWD}"
lint = "ruff check --fix ${PWD}"
check = "basedpyright ${PWD}"
test = "pytest ${PWD}"
all = ["fmt", "lint", "check"]
ci-fmt = "ruff format --check ${PWD}"
ci-lint = "ruff check ${PWD}"
